{
  "version": 4,
  "terraform_version": "0.12.23",
  "serial": 160,
  "lineage": "9c9cee08-429a-f446-a900-52a35264f78a",
  "resources": [
    {
      "module": "module.vpc_peering_saopaulo_to_frankfurt",
      "mode": "data",
      "type": "aws_vpc",
      "name": "peer_vpc",
      "provider": "provider.aws.core",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:726332586568:vpc/vpc-0e69ca109fd8fd88b",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0c4557491f48ff209",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-a6b015cd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e69ca109fd8fd88b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06e3180565ae196fd",
            "owner_id": "726332586568",
            "state": "available",
            "tags": {
              "Name": "prd-stream-core",
              "kubernetes.io/cluster/prd-stream-core-a": "shared",
              "kubernetes.io/cluster/prd-stream-core-b": "shared",
              "terraform": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_peering_saopaulo_to_frankfurt",
      "mode": "data",
      "type": "aws_vpc",
      "name": "this_vpc",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:726332586568:vpc/vpc-07427be573f6c9db1",
            "cidr_block": "10.6.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-02a3d1b87f4ed74c3",
                "cidr_block": "10.6.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-131e3b77",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07427be573f6c9db1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0289cdf0bf19e1b9f",
            "owner_id": "726332586568",
            "state": "available",
            "tags": {
              "Name": "prd-stream-multi-saopaulo",
              "terraform": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.ingest_proxy_saopaulo",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ingest_proxy",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-064e2a05d676d70cc",
            "domain": "vpc",
            "id": "eipalloc-0bf46882f2ee204ac",
            "instance": "i-0aaee8be426f5a478",
            "network_interface": "eni-0aeb7cb18d47ce47f",
            "private_dns": "ip-10-6-43-231.sa-east-1.compute.internal",
            "private_ip": "10.6.43.231",
            "public_dns": "ec2-54-233-90-74.sa-east-1.compute.amazonaws.com",
            "public_ip": "54.233.90.74",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "v200324-malibu-proxy-0"
            },
            "vpc": true
          },
          "dependencies": [
            "module.ingest_proxy_saopaulo.aws_instance.ingest_proxy"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-082fb7f4",
            "domain": "vpc",
            "id": "eipalloc-049a7cd45a1c39f97",
            "network_interface": "eni-0f098ffaf25311e69",
            "private_dns": "ip-10-6-51-115.sa-east-1.compute.internal",
            "private_ip": "10.6.51.115",
            "public_dns": "ec2-54-207-76-143.sa-east-1.compute.amazonaws.com",
            "public_ip": "54.207.76.143",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prd-stream-multi-saopaulo-sa-east-1a",
              "terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-5f1cf592",
            "domain": "vpc",
            "id": "eipalloc-0da0ff312c93de84e",
            "network_interface": "eni-0abe2eef2aa1325ab",
            "private_dns": "ip-10-6-100-198.sa-east-1.compute.internal",
            "private_ip": "10.6.100.198",
            "public_dns": "ec2-18-228-77-240.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.228.77.240",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prd-stream-multi-saopaulo-sa-east-1b",
              "terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-96f9394c",
            "domain": "vpc",
            "id": "eipalloc-049df8860ad99cef3",
            "network_interface": "eni-01dadb54d977f69bf",
            "private_dns": "ip-10-6-191-132.sa-east-1.compute.internal",
            "private_ip": "10.6.191.132",
            "public_dns": "ec2-18-230-19-218.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.230.19.218",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prd-stream-multi-saopaulo-sa-east-1c",
              "terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.ingest_proxy_saopaulo",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ingest_proxy",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04238c605b236d53f",
            "arn": "arn:aws:ec2:sa-east-1:726332586568:instance/i-0aaee8be426f5a478",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "v1111-prd-stream-core-uploader-2018111219382952310000000c",
            "id": "i-0aaee8be426f5a478",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "prd-stream-v20200324",
            "monitoring": true,
            "primary_network_interface_id": "eni-0aeb7cb18d47ce47f",
            "private_dns": "ip-10-6-43-231.sa-east-1.compute.internal",
            "private_ip": "10.6.43.231",
            "public_dns": "ec2-54-233-90-74.sa-east-1.compute.amazonaws.com",
            "public_ip": "54.233.90.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d7e51b7c5d21ccf2",
                "volume_size": 25,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-060b5f299b14a7235",
            "tags": {
              "Group": "v200324-malibu-proxy",
              "Name": "v200324-malibu-proxy-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03506d5b56268aed9"
            ]
          },
          "dependencies": [
            "module.ingest_proxy_saopaulo.module.sg.aws_security_group.this",
            "module.ingest_proxy_saopaulo.module.sg.aws_security_group.this_name_prefix",
            "module.vpc_saopaulo.module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "igw-060748ba0bb2c1bc1",
            "owner_id": "726332586568",
            "tags": {
              "Name": "prd-stream-multi-saopaulo",
              "terraform": "true"
            },
            "vpc_id": "vpc-07427be573f6c9db1"
          },
          "dependencies": [
            "module.vpc_saopaulo.module.vpc.aws_vpc.this",
            "module.vpc_saopaulo.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-049a7cd45a1c39f97",
            "id": "nat-0b93ee2d30e67cb4d",
            "network_interface_id": "eni-0f098ffaf25311e69",
            "private_ip": "10.6.51.115",
            "public_ip": "54.207.76.143",
            "subnet_id": "subnet-060b5f299b14a7235",
            "tags": {
              "Name": "prd-stream-multi-saopaulo-sa-east-1a",
              "terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc_saopaulo.module.vpc.aws_eip.nat",
            "module.vpc_saopaulo.module.vpc.aws_internet_gateway.this",
            "module.vpc_saopaulo.module.vpc.aws_subnet.public",
            "module.vpc_saopaulo.module.vpc.aws_vpc.this",
            "module.vpc_saopaulo.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0da0ff312c93de84e",
            "id": "nat-013ad19ca756f9c9c",
            "network_interface_id": "eni-0abe2eef2aa1325ab",
            "private_ip": "10.6.100.198",
            "public_ip": "18.228.77.240",
            "subnet_id": "subnet-0b6a79710ccef2745",
            "tags": {
              "Name": "prd-stream-multi-saopaulo-sa-east-1b",
              "terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc_saopaulo.module.vpc.aws_eip.nat",
            "module.vpc_saopaulo.module.vpc.aws_internet_gateway.this",
            "module.vpc_saopaulo.module.vpc.aws_subnet.public",
            "module.vpc_saopaulo.module.vpc.aws_vpc.this",
            "module.vpc_saopaulo.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-049df8860ad99cef3",
            "id": "nat-0b37c367ac1ec4871",
            "network_interface_id": "eni-01dadb54d977f69bf",
            "private_ip": "10.6.191.132",
            "public_ip": "18.230.19.218",
            "subnet_id": "subnet-04f1f4acf97a3b8bb",
            "tags": {
              "Name": "prd-stream-multi-saopaulo-sa-east-1c",
              "terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc_saopaulo.module.vpc.aws_eip.nat",
            "module.vpc_saopaulo.module.vpc.aws_internet_gateway.this",
            "module.vpc_saopaulo.module.vpc.aws_subnet.public",
            "module.vpc_saopaulo.module.vpc.aws_vpc.this",
            "module.vpc_saopaulo.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.vpc_peering_saopaulo_to_frankfurt",
      "mode": "managed",
      "type": "aws_route",
      "name": "peer_routes_region",
      "each": "list",
      "provider": "provider.aws.core",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.6.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0091bbadbca0e389f3436518301",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0091bbadbca0e389f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": "pcx-0432145f14263ea1f"
          },
          "dependencies": [
            "module.vpc_peering_saopaulo_to_frankfurt.aws_vpc_peering_connection.this",
            "module.vpc_saopaulo.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.6.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05e8ef85c2817d46c3436518301",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05e8ef85c2817d46c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": "pcx-0432145f14263ea1f"
          },
          "dependencies": [
            "module.vpc_peering_saopaulo_to_frankfurt.aws_vpc_peering_connection.this",
            "module.vpc_saopaulo.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.6.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06e3180565ae196fd3436518301",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06e3180565ae196fd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": "pcx-0432145f14263ea1f"
          },
          "dependencies": [
            "module.vpc_peering_saopaulo_to_frankfurt.aws_vpc_peering_connection.this",
            "module.vpc_saopaulo.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.6.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07504082bd25d356d3436518301",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07504082bd25d356d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": "pcx-0432145f14263ea1f"
          },
          "dependencies": [
            "module.vpc_peering_saopaulo_to_frankfurt.aws_vpc_peering_connection.this",
            "module.vpc_saopaulo.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.6.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0aedf2b3d1004f5c43436518301",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0aedf2b3d1004f5c4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": "pcx-0432145f14263ea1f"
          },
          "dependencies": [
            "module.vpc_peering_saopaulo_to_frankfurt.aws_vpc_peering_connection.this",
            "module.vpc_saopaulo.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b10e50993a7c9cdc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0b93ee2d30e67cb4d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b10e50993a7c9cdc",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc_saopaulo.module.vpc.aws_eip.nat",
            "module.vpc_saopaulo.module.vpc.aws_internet_gateway.this",
            "module.vpc_saopaulo.module.vpc.aws_nat_gateway.this",
            "module.vpc_saopaulo.module.vpc.aws_route_table.private",
            "module.vpc_saopaulo.module.vpc.aws_subnet.public",
            "module.vpc_saopaulo.module.vpc.aws_vpc.this",
            "module.vpc_saopaulo.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b22e658298f9891c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-013ad19ca756f9c9c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b22e658298f9891c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc_saopaulo.module.vpc.aws_eip.nat",
            "module.vpc_saopaulo.module.vpc.aws_internet_gateway.this",
            "module.vpc_saopaulo.module.vpc.aws_nat_gateway.this",
            "module.vpc_saopaulo.module.vpc.aws_route_table.private",
            "module.vpc_saopaulo.module.vpc.aws_subnet.public",
            "module.vpc_saopaulo.module.vpc.aws_vpc.this",
            "module.vpc_saopaulo.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0555bde6732a1355b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0b37c367ac1ec4871",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0555bde6732a1355b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc_saopaulo.module.vpc.aws_eip.nat",
            "module.vpc_saopaulo.module.vpc.aws_internet_gateway.this",
            "module.vpc_saopaulo.module.vpc.aws_nat_gateway.this",
            "module.vpc_saopaulo.module.vpc.aws_route_table.private",
            "module.vpc_saopaulo.module.vpc.aws_subnet.public",
            "module.vpc_saopaulo.module.vpc.aws_vpc.this",
            "module.vpc_saopaulo.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-060748ba0bb2c1bc1",
            "id": "r-rtb-0de02b926f969ca331080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0de02b926f969ca33",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc_saopaulo.module.vpc.aws_internet_gateway.this",
            "module.vpc_saopaulo.module.vpc.aws_route_table.public",
            "module.vpc_saopaulo.module.vpc.aws_vpc.this",
            "module.vpc_saopaulo.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.vpc_peering_saopaulo_to_frankfurt",
      "mode": "managed",
      "type": "aws_route",
      "name": "this_routes_region",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0289cdf0bf19e1b9f179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0289cdf0bf19e1b9f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": "pcx-0432145f14263ea1f"
          },
          "dependencies": [
            "module.vpc_peering_saopaulo_to_frankfurt.aws_vpc_peering_connection.this",
            "module.vpc_saopaulo.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0555bde6732a1355b179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0555bde6732a1355b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": "pcx-0432145f14263ea1f"
          },
          "dependencies": [
            "module.vpc_peering_saopaulo_to_frankfurt.aws_vpc_peering_connection.this",
            "module.vpc_saopaulo.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b10e50993a7c9cdc179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b10e50993a7c9cdc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": "pcx-0432145f14263ea1f"
          },
          "dependencies": [
            "module.vpc_peering_saopaulo_to_frankfurt.aws_vpc_peering_connection.this",
            "module.vpc_saopaulo.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b22e658298f9891c179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b22e658298f9891c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": "pcx-0432145f14263ea1f"
          },
          "dependencies": [
            "module.vpc_peering_saopaulo_to_frankfurt.aws_vpc_peering_connection.this",
            "module.vpc_saopaulo.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0de02b926f969ca33179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0de02b926f969ca33",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": "pcx-0432145f14263ea1f"
          },
          "dependencies": [
            "module.vpc_peering_saopaulo_to_frankfurt.aws_vpc_peering_connection.this",
            "module.vpc_saopaulo.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b10e50993a7c9cdc",
            "owner_id": "726332586568",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0b93ee2d30e67cb4d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.0.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-0432145f14263ea1f"
              }
            ],
            "tags": {
              "Name": "prd-stream-multi-saopaulo-private-sa-east-1a",
              "terraform": "true"
            },
            "vpc_id": "vpc-07427be573f6c9db1"
          },
          "dependencies": [
            "module.vpc_saopaulo.module.vpc.aws_vpc.this",
            "module.vpc_saopaulo.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b22e658298f9891c",
            "owner_id": "726332586568",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-013ad19ca756f9c9c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.0.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-0432145f14263ea1f"
              }
            ],
            "tags": {
              "Name": "prd-stream-multi-saopaulo-private-sa-east-1b",
              "terraform": "true"
            },
            "vpc_id": "vpc-07427be573f6c9db1"
          },
          "dependencies": [
            "module.vpc_saopaulo.module.vpc.aws_vpc.this",
            "module.vpc_saopaulo.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0555bde6732a1355b",
            "owner_id": "726332586568",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0b37c367ac1ec4871",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.0.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-0432145f14263ea1f"
              }
            ],
            "tags": {
              "Name": "prd-stream-multi-saopaulo-private-sa-east-1c",
              "terraform": "true"
            },
            "vpc_id": "vpc-07427be573f6c9db1"
          },
          "dependencies": [
            "module.vpc_saopaulo.module.vpc.aws_vpc.this",
            "module.vpc_saopaulo.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0de02b926f969ca33",
            "owner_id": "726332586568",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-060748ba0bb2c1bc1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.0.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-0432145f14263ea1f"
              }
            ],
            "tags": {
              "Name": "prd-stream-multi-saopaulo-public",
              "terraform": "true"
            },
            "vpc_id": "vpc-07427be573f6c9db1"
          },
          "dependencies": [
            "module.vpc_saopaulo.module.vpc.aws_vpc.this",
            "module.vpc_saopaulo.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6384cf56e0be322",
            "route_table_id": "rtb-0b10e50993a7c9cdc",
            "subnet_id": "subnet-0665f66867f63032f"
          },
          "dependencies": [
            "module.vpc_saopaulo.module.vpc.aws_route_table.private",
            "module.vpc_saopaulo.module.vpc.aws_subnet.private",
            "module.vpc_saopaulo.module.vpc.aws_vpc.this",
            "module.vpc_saopaulo.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a0a7d612948bd37",
            "route_table_id": "rtb-0b22e658298f9891c",
            "subnet_id": "subnet-03516154dfc385ae8"
          },
          "dependencies": [
            "module.vpc_saopaulo.module.vpc.aws_route_table.private",
            "module.vpc_saopaulo.module.vpc.aws_subnet.private",
            "module.vpc_saopaulo.module.vpc.aws_vpc.this",
            "module.vpc_saopaulo.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0444396cf69701d20",
            "route_table_id": "rtb-0555bde6732a1355b",
            "subnet_id": "subnet-058f1d7c10542d2be"
          },
          "dependencies": [
            "module.vpc_saopaulo.module.vpc.aws_route_table.private",
            "module.vpc_saopaulo.module.vpc.aws_subnet.private",
            "module.vpc_saopaulo.module.vpc.aws_vpc.this",
            "module.vpc_saopaulo.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038e66f4ea4188f3e",
            "route_table_id": "rtb-0de02b926f969ca33",
            "subnet_id": "subnet-060b5f299b14a7235"
          },
          "dependencies": [
            "module.vpc_saopaulo.module.vpc.aws_route_table.public",
            "module.vpc_saopaulo.module.vpc.aws_subnet.public",
            "module.vpc_saopaulo.module.vpc.aws_vpc.this",
            "module.vpc_saopaulo.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0165620bb6725e827",
            "route_table_id": "rtb-0de02b926f969ca33",
            "subnet_id": "subnet-0b6a79710ccef2745"
          },
          "dependencies": [
            "module.vpc_saopaulo.module.vpc.aws_route_table.public",
            "module.vpc_saopaulo.module.vpc.aws_subnet.public",
            "module.vpc_saopaulo.module.vpc.aws_vpc.this",
            "module.vpc_saopaulo.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f021451aed6fe82",
            "route_table_id": "rtb-0de02b926f969ca33",
            "subnet_id": "subnet-04f1f4acf97a3b8bb"
          },
          "dependencies": [
            "module.vpc_saopaulo.module.vpc.aws_route_table.public",
            "module.vpc_saopaulo.module.vpc.aws_subnet.public",
            "module.vpc_saopaulo.module.vpc.aws_vpc.this",
            "module.vpc_saopaulo.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.ingest_proxy_saopaulo.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.ingest_proxy_saopaulo.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:726332586568:security-group/sg-03506d5b56268aed9",
            "description": "Security group for ingest proxy",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03506d5b56268aed9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "rtmp open to public",
                "from_port": 1935,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1935
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "101.99.64.65/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "v200324-malibu-proxy-20200324090754547400000001",
            "name_prefix": "v200324-malibu-proxy-",
            "owner_id": "726332586568",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "v200324-malibu-proxy"
            },
            "timeouts": null,
            "vpc_id": "vpc-07427be573f6c9db1"
          },
          "dependencies": [
            "module.vpc_saopaulo.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ingest_proxy_saopaulo.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_rules",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.ingest_proxy_saopaulo.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.ingest_proxy_saopaulo.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.ingest_proxy_saopaulo.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_self",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.ingest_proxy_saopaulo.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.ingest_proxy_saopaulo.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_rules",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.ingest_proxy_saopaulo.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "101.99.64.65/32"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-102552757",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03506d5b56268aed9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.ingest_proxy_saopaulo.module.sg.aws_security_group.this",
            "module.ingest_proxy_saopaulo.module.sg.aws_security_group.this_name_prefix",
            "module.vpc_saopaulo.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/8"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-4191151062",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03506d5b56268aed9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.ingest_proxy_saopaulo.module.sg.aws_security_group.this",
            "module.ingest_proxy_saopaulo.module.sg.aws_security_group.this_name_prefix",
            "module.vpc_saopaulo.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ingest_proxy_saopaulo.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.ingest_proxy_saopaulo.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_self",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.ingest_proxy_saopaulo.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.ingest_proxy_saopaulo.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-246848858",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-03506d5b56268aed9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.ingest_proxy_saopaulo.module.sg.aws_security_group.this",
            "module.ingest_proxy_saopaulo.module.sg.aws_security_group.this_name_prefix",
            "module.vpc_saopaulo.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ingest_proxy_saopaulo.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.ingest_proxy_saopaulo.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.ingest_proxy_saopaulo.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_self",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.ingest_proxy_saopaulo.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.ingest_proxy_saopaulo.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.ingest_proxy_saopaulo.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "rtmp open to public",
            "from_port": 1935,
            "id": "sgrule-4195884033",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03506d5b56268aed9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 1935,
            "type": "ingress"
          },
          "dependencies": [
            "module.ingest_proxy_saopaulo.module.sg.aws_security_group.this",
            "module.ingest_proxy_saopaulo.module.sg.aws_security_group.this_name_prefix",
            "module.vpc_saopaulo.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ingest_proxy_saopaulo.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.ingest_proxy_saopaulo.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.ingest_proxy_saopaulo.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": []
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:726332586568:subnet/subnet-0665f66867f63032f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.6.0.0/19",
            "id": "subnet-0665f66867f63032f",
            "map_public_ip_on_launch": false,
            "owner_id": "726332586568",
            "tags": {
              "Name": "prd-stream-multi-saopaulo-private-sa-east-1a",
              "terraform": "true"
            },
            "vpc_id": "vpc-07427be573f6c9db1"
          },
          "dependencies": [
            "module.vpc_saopaulo.module.vpc.aws_vpc.this",
            "module.vpc_saopaulo.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:726332586568:subnet/subnet-03516154dfc385ae8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.6.64.0/19",
            "id": "subnet-03516154dfc385ae8",
            "map_public_ip_on_launch": false,
            "owner_id": "726332586568",
            "tags": {
              "Name": "prd-stream-multi-saopaulo-private-sa-east-1b",
              "terraform": "true"
            },
            "vpc_id": "vpc-07427be573f6c9db1"
          },
          "dependencies": [
            "module.vpc_saopaulo.module.vpc.aws_vpc.this",
            "module.vpc_saopaulo.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:726332586568:subnet/subnet-058f1d7c10542d2be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.6.128.0/19",
            "id": "subnet-058f1d7c10542d2be",
            "map_public_ip_on_launch": false,
            "owner_id": "726332586568",
            "tags": {
              "Name": "prd-stream-multi-saopaulo-private-sa-east-1c",
              "terraform": "true"
            },
            "vpc_id": "vpc-07427be573f6c9db1"
          },
          "dependencies": [
            "module.vpc_saopaulo.module.vpc.aws_vpc.this",
            "module.vpc_saopaulo.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:726332586568:subnet/subnet-060b5f299b14a7235",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.6.32.0/19",
            "id": "subnet-060b5f299b14a7235",
            "map_public_ip_on_launch": true,
            "owner_id": "726332586568",
            "tags": {
              "Name": "prd-stream-multi-saopaulo-public-sa-east-1a",
              "terraform": "true"
            },
            "vpc_id": "vpc-07427be573f6c9db1"
          },
          "dependencies": [
            "module.vpc_saopaulo.module.vpc.aws_vpc.this",
            "module.vpc_saopaulo.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:726332586568:subnet/subnet-0b6a79710ccef2745",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.6.96.0/19",
            "id": "subnet-0b6a79710ccef2745",
            "map_public_ip_on_launch": true,
            "owner_id": "726332586568",
            "tags": {
              "Name": "prd-stream-multi-saopaulo-public-sa-east-1b",
              "terraform": "true"
            },
            "vpc_id": "vpc-07427be573f6c9db1"
          },
          "dependencies": [
            "module.vpc_saopaulo.module.vpc.aws_vpc.this",
            "module.vpc_saopaulo.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:726332586568:subnet/subnet-04f1f4acf97a3b8bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.6.160.0/19",
            "id": "subnet-04f1f4acf97a3b8bb",
            "map_public_ip_on_launch": true,
            "owner_id": "726332586568",
            "tags": {
              "Name": "prd-stream-multi-saopaulo-public-sa-east-1c",
              "terraform": "true"
            },
            "vpc_id": "vpc-07427be573f6c9db1"
          },
          "dependencies": [
            "module.vpc_saopaulo.module.vpc.aws_vpc.this",
            "module.vpc_saopaulo.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:726332586568:vpc/vpc-07427be573f6c9db1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.6.0.0/16",
            "default_network_acl_id": "acl-0772a48995270b4a2",
            "default_route_table_id": "rtb-0289cdf0bf19e1b9f",
            "default_security_group_id": "sg-0ca7bee403829797a",
            "dhcp_options_id": "dopt-131e3b77",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07427be573f6c9db1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0289cdf0bf19e1b9f",
            "owner_id": "726332586568",
            "tags": {
              "Name": "prd-stream-multi-saopaulo",
              "terraform": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "apigw",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "appmesh_envoy_management",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "appstream",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "athena",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloud_directory",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudformation",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudtrail",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codebuild",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codecommit",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codepipeline",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "config",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_agent",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_telemetry",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "efs",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elasticloadbalancing",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "events",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "git_codecommit",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "glue",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kinesis_firehose",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kinesis_streams",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kms",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "monitoring",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "rekognition",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_api",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_notebook",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_runtime",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "servicecatalog",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sns",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "storagegateway",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sts",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "transfer",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_saopaulo.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "transferserver",
      "each": "list",
      "provider": "provider.aws.proxy_saopaulo"
    },
    {
      "module": "module.vpc_peering_saopaulo_to_frankfurt",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "this",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "id": "pcx-0432145f14263ea1f",
            "peer_owner_id": "726332586568",
            "peer_region": "eu-central-1",
            "peer_vpc_id": "vpc-0e69ca109fd8fd88b",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "v200324-vpc-peering-saopaulo-to-frankfurt",
              "Side": "Requester",
              "terraform": "true"
            },
            "vpc_id": "vpc-07427be573f6c9db1"
          },
          "dependencies": [
            "module.vpc_saopaulo.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_peering_saopaulo_to_frankfurt",
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "peer_accepter",
      "provider": "provider.aws.core",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0432145f14263ea1f",
            "peer_owner_id": "726332586568",
            "peer_region": "eu-central-1",
            "peer_vpc_id": "vpc-0e69ca109fd8fd88b",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "v200324-vpc-peering-saopaulo-to-frankfurt",
              "Side": "Accepter",
              "terraform": "true"
            },
            "vpc_id": "vpc-07427be573f6c9db1",
            "vpc_peering_connection_id": "pcx-0432145f14263ea1f"
          },
          "dependencies": [
            "module.vpc_peering_saopaulo_to_frankfurt.aws_vpc_peering_connection.this",
            "module.vpc_saopaulo.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_peering_saopaulo_to_frankfurt",
      "mode": "managed",
      "type": "aws_vpc_peering_connection_options",
      "name": "accepter",
      "provider": "provider.aws.core",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "id": "pcx-0432145f14263ea1f",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_peering_connection_id": "pcx-0432145f14263ea1f"
          },
          "dependencies": [
            "module.vpc_peering_saopaulo_to_frankfurt.aws_vpc_peering_connection.this",
            "module.vpc_peering_saopaulo_to_frankfurt.aws_vpc_peering_connection_accepter.peer_accepter",
            "module.vpc_saopaulo.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_peering_saopaulo_to_frankfurt",
      "mode": "managed",
      "type": "aws_vpc_peering_connection_options",
      "name": "this",
      "provider": "provider.aws.proxy_saopaulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "id": "pcx-0432145f14263ea1f",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_peering_connection_id": "pcx-0432145f14263ea1f"
          },
          "dependencies": [
            "module.vpc_peering_saopaulo_to_frankfurt.aws_vpc_peering_connection.this",
            "module.vpc_peering_saopaulo_to_frankfurt.aws_vpc_peering_connection_accepter.peer_accepter",
            "module.vpc_saopaulo.module.vpc.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}